discussion/kv_engine/136257/136257_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Pass the vbucket lock down to compactDb()

This allows the underlying storage engine to run portions (or
everything) in its compacting logic in parallel with the
flusher and only release the lock while it is needed.

Change-Id: I1bde09593389ce7322b54764a180a322d5ee95b3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-09-16 10:18:57.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-16 11:50:49.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4545/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:40: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
    EXPECT_FALSE(kvstore->compactDB(ctx));
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest.h:1972:25: note: expanded from macro "EXPECT_FALSE"
  GTEST_TEST_BOOLEAN_(!(condition), #condition, true, false, \
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/internal/gtest-internal.h:1325:34: note: expanded from macro "GTEST_TEST_BOOLEAN_"
      ::testing::AssertionResult(expression)) \
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:256:5: note: "compactDB" declared here
    bool compactDB(std::unique_lock<std::mutex>& vbLock,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4545/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:40:
error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4545/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26344/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:40:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26344/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30461/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\couch-kvstore_test.cc(1576): error C2660: "CouchKVStore::compactDB": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6040/ : FAILURE

Compile error at [2020-09-16T11:42:50.576Z] ../kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:133:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6040/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13715/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4900/ : FAILURE

Compile error at [2020-09-16T10:51:24.040Z] ../kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:40:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4900/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5798/ : FAILURE

Compile error at [2020-09-16T11:12:15.252Z] ../kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:26:
error: no matching function for call to ?MockCouchKVStore::compactDB(std::shared_ptr<compaction_ctx>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5798/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5909/ : FAILURE

Compile error at [2020-09-16T11:25:30.152Z] ../kv_engine/engines/ep/tests/module_tests/couch-kvstore_test.cc:1576:26:
error: no matching function for call to ?MockCouchKVStore::compactDB(std::shared_ptr<compaction_ctx>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3072/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
